--- a/source/AgilePlayer/AgilePlayer.csproj
+++ b/source/AgilePlayer/AgilePlayer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{962C9FB0-6981-4455-B189-4F74AF505C9B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>APlayer</RootNamespace>
     <AssemblyName>AgilePlayer</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
